RESOLVED FIXED109606
[BlackBerry] CSS animations stop running during zoom
https://bugs.webkit.org/show_bug.cgi?id=109606
Summary [BlackBerry] CSS animations stop running during zoom
Andrew Lo
Reported 2013-02-12 12:48:06 PST
CSS animations stop running during zoom since render jobs are suspended.
Attachments
Patch (7.72 KB, patch)
2013-02-12 12:56 PST, Andrew Lo
no flags
Andrew Lo
Comment 1 2013-02-12 12:56:21 PST
Rob Buis
Comment 2 2013-02-12 13:00:46 PST
Comment on attachment 187913 [details] Patch LGTM.
WebKit Review Bot
Comment 3 2013-02-12 14:00:57 PST
Comment on attachment 187913 [details] Patch Clearing flags on attachment: 187913 Committed r142670: <http://trac.webkit.org/changeset/142670>
WebKit Review Bot
Comment 4 2013-02-12 14:01:01 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.