[BlackBerry] CSS animations stop running during zoom https://bugs.webkit.org/show_bug.cgi?id=109606

Patch by Andrew Lo <anlo@rim.com> on 2013-02-12
Reviewed by Rob Buis.
Internally reviewed by Jakob Petsovits.

Internal PR 286160.
New BackingStore API for suspending/resuming geometry updates.

This is needed because we want to allow render jobs to continue during
zoom, but we don't want to allow geometry updates during zoom.

Prevent scroll/zoom render jobs from being added to the queue if
the tile is outside the expanded content rect.

* Api/BackingStore.cpp:
(BlackBerry::WebKit::BackingStorePrivate::BackingStorePrivate):
(BlackBerry::WebKit::BackingStorePrivate::suspendGeometryUpdates):
(WebKit):
(BlackBerry::WebKit::BackingStorePrivate::resumeGeometryUpdates):
(BlackBerry::WebKit::BackingStorePrivate::setBackingStoreRect):
(BlackBerry::WebKit::BackingStore::suspendGeometryUpdates):
(BlackBerry::WebKit::BackingStore::resumeGeometryUpdates):
* Api/BackingStore.h:
* Api/BackingStore_p.h:
(BackingStorePrivate):
* WebKitSupport/RenderQueue.cpp:
(BlackBerry::WebKit::RenderQueue::addToScrollZoomQueue):

Canonical link: https://commits.webkit.org/127900@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142670 268f45cc-cd09-0410-ab3c-d52691b4dbfc